k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linetime-frontend
  name: linetime-frontend
  namespace: linetime
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: linetime-frontend
